2019-September-01 Struan Robertson

		* Addition of VC 16 project files.

		* CompoundMicroRate.cpp: Initial class definition of compound microcanonical rate coefficient calculator.

		* ExchangeReaction.h/.cpp: Initial class definition of reversible exchange reaction.

		* CollisionOperator.h/.cpp: Tidying of revised equilibrium fraction method.

2019-August-05 Struan Robertson

		* CollisionOperator.h/.cpp, System.cpp: Provisional check-in of revised equilibrium fraction
		method.

2019-May-27 Struan Robertson

		* CollisionOperator.cpp, MesmerTools.cpp, MicroRates.cpp: Fix for incorrect cell number 
		update in automated cut-off checker.

2019-May-27 Struan Robertson

		* unitsConversion.h/.cpp, Constants.cpp, gDensityOfStates.cpp: Pressure unit "bar" added.

		* ConditionsManager.cpp: "factor" added to PTSet definition to allow logarithmic specification 
		of pressure and easier fall-off curve calculation and manipulation.

2019-May-06 Struan Robertson

		* MesmerTools.h/.cpp, AssociationReaction.cpp, DensityOfStates.cpp, UnitTest.cpp: Better
		warning message when grain average does not return the number of grains requested.

		* memserPlugins.xsd: Schema update.

		* FittingUtils.cpp: Adding warning message when bounds check fails

		* main.cpp: Version update.

		* HinderedRotorQM1D.cpp: Minor tidy of commented out code.

		* Documentation: version update.

		* Makefile: Updated to include uTST.
 
2019-May-06 Struan Robertson

		* Eckart.cpp: Altered Eckart method to allow barriers to be read in.
 
2019-May-06 Struan Robertson

		* Rdouble.h/.cpp, FittingUtils.cpp: Added methods to print derived variables to 
		Rdouble class. 

2019-May-04 Struan Robertson

		* ClassicalCoupledRotors.cpp: Fix for optical isomers bug in coupled classical rotors 
		method. 

2019-May-02 Struan Robertson

		* uTST.cpp, FTSTPotential.h, HirstWardlawPotential.cpp: Example potential (based on 
		Hirst-Wardlaw) invoked from uFTST. 

2019-April-27 Struan Robertson
